# walkai-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/walkai/: __init__.py  build.py  configuration.py  inputs.py  main.py  project.py  push.py  secrets.py
src/walkai_cli/: __init__.py  build.py  cli.py  configuration.py  project.py  push.py
tests/: test_build.py  test_configuration.py  test_inputs.py  test_job.py  test_push.py  test_secrets.py  test_submit.py
