[project]
name = "walkai"
version = "0.1.0"
description = "Opinionated CLI to build and ship Python apps as Kubernetes-ready images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["platformdirs>=4.4.0", "tomli-w>=1.2.0", "typer>=0.19.1"]

[project.scripts]
walkai = "walkai.main:app"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2"]
